allow user to add questions to a survey

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <h1>Make Your Own Survey</h1>
 
 <a href="/survey/new"><button type="button" name="button">Add Survey</button></a>
-<a href="#"><button type="button" name="button">See Existing Surveys</button></a>
+<a href="/surveys"><button type="button" name="button">See Existing Surveys</button></a>
